lod2demo (1.1.8) lod2; urgency=low

  * add extra lod2 stack dependencies

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Sun, 22 Aug 2011  02:37:31 -0700

lod2demo (1.1.7) lod2; urgency=low

  * correct layout for rdf file upload, adjust pointers to tools

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Mon, 15 Aug 2011  02:37:31 -0700

lod2demo (1.1.6) lod2; urgency=low

  * new layout with menu's instead of tabs, split functionalities in separate
    classes.

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Sun, 14 Aug 2011  02:37:31 -0700

lod2demo (1.1.5) lod2; urgency=low

  * Make the demonstrator closer to the agreed view: global visible current
    graph, embedded tools, different options for Extraction and Loading, ..

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Thu, 11 Aug 2011  02:37:31 -0700
lod2demo (1.1.4) lod2; urgency=low

  * take for the online 'lod2'-sigma also the hostname configuration into
    account.

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Mon, 8 Aug 2011  02:37:31 -0700
lod2demo (1.1.3) lod2; urgency=low

  * add references to packages d2r-cordis & silk. Add activation call for
    to allow editing of graphs in OntoWiki.

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Sun, 7 Aug 2011  02:37:31 -0700
lod2demo (1.1.2) lod2; urgency=low

  * add reading of configuration graph in virtuoso. This will enable to
    specify configuration information in a system readable way.

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 7 June 2011 02:37:31 -0700
lod2demo (1.1.1) lod2; urgency=low

  * alter lod2 dependency for ontowiki

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 7 June 2011 02:37:31 -0700
lod2demo (1.1) lod2; urgency=low

  * integrate online sigma page.
  * add lod2 dependencies
